[project]
name = "alsow214"
version = "0.1.0"
description = "my project"
authors = [
    {name = "Artur Kovalchuk",email = "johndoe@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=8.0,<9.0)",
    "pillow (>=11.1.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

